# flaura

./: README.md  pyproject.toml
src/flaura/: __main__.py  config.py
src/flaura/agent/: core.py  types.py
src/flaura/agent/providers/: anthropic.py  base.py  echo.py  ollama.py
src/flaura/core/: app.py  commands.py  dispatcher.py  history.py  repl.py
src/flaura/entry_points/: run_flaura.py
src/flaura/knowledge/: __init__.py  format.py  graph.py  query.py  store.py
src/flaura/plugins/: base.py  default.py  loader.py  registry.py  types.py
src/flaura/plugins/builtin/: __init__.py  fileops.py  shell.py
src/flaura/ui/: command_line.py  completion.py  console.py  input.py  key_bindings.py  layout.py  output.py  prompt_style.py  session.py  status_bar.py
tests/: test_knowledge_graph.py  test_smoke.py  test_tool_loop.py  test_trust_gate.py  test_validation.py
