[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flaura"
version = "0.0.1"
description = "A terminal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "prompt_toolkit>=3.0",
    "pygments>=2.0",
]

[project.scripts]
flaura = "flaura.entry_points.run_flaura:main"

[project.entry-points."flaura.plugins"]
# third-party plugins register here

[project.optional-dependencies]
ollama = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
